prevent-deleting-resources/prevent-deleting-services/1-policy-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sdenysvcdelete
spec:
  crd:
    spec:
      names:
        kind: K8sDenySVCDelete
        openAPIV3Schema:
          properties:
            service:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdenysvcdelete
         violation[{"msg": msg}]{
          svc := input.parameters.service
          input.review.operation == "DELETE"
          msg := sprintf("Deleting the Service %v is forbidden", [svc])
        }
