prevent-deleting-resources/prevent-deleting-services/2-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenySVCDelete
metadata:
  name: k8sdenysvcdelete
spec:
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Service"]
  parameters:
    svc: "test"
